tests/org.eclipse.php.core.tests/src/org/eclipse/php/core/tests/errors/MarkerComparator#compareInt(int,int).mjava
	private int compareInt(int l, int r) {
		return l < r ? -1 : (l == r ? 0 : 1);
	}

